@startuml er-diagram
title Online Vehicle Reservation System - Entity Relationship Diagram
skinparam backgroundColor white
skinparam linetype ortho

entity "users" as users {
    * id : BIGINT <<PK>>
    --
    * username : VARCHAR(50) <<unique>>
    * password : VARCHAR(255)
    * full_name : VARCHAR(100)
    * email : VARCHAR(100)
    * role : VARCHAR(20)
    * enabled : TINYINT(1)
    * created_at : DATETIME
}

entity "customers" as customers {
    * id : BIGINT <<PK>>
    --
    * full_name : VARCHAR(100)
    * address : VARCHAR(200)
    * contact_number : VARCHAR(20)
    email : VARCHAR(100)
    license_number : VARCHAR(30)
    * created_at : DATETIME
}

entity "vehicle_categories" as categories {
    * id : BIGINT <<PK>>
    --
    * category_name : VARCHAR(50) <<unique>>
    * daily_rate : DECIMAL(10,2)
    description : VARCHAR(255)
}

entity "vehicles" as vehicles {
    * id : BIGINT <<PK>>
    --
    * registration_number : VARCHAR(20) <<unique>>
    * make : VARCHAR(50)
    * model : VARCHAR(50)
    * manufacture_year : INT
    * category_id : BIGINT <<FK>>
    * status : VARCHAR(20)
    image_url : VARCHAR(255)
}

entity "reservations" as reservations {
    * id : BIGINT <<PK>>
    --
    * reservation_number : VARCHAR(20) <<unique>>
    * customer_id : BIGINT <<FK>>
    * vehicle_id : BIGINT <<FK>>
    * pickup_date : DATE
    * pickup_time : TIME
    * return_date : DATE
    * return_time : TIME
    * status : VARCHAR(20)
    notes : VARCHAR(255)
    * created_by : BIGINT <<FK>>
    * created_at : DATETIME
}

entity "bills" as bills {
    * id : BIGINT <<PK>>
    --
    * bill_number : VARCHAR(20) <<unique>>
    * reservation_id : BIGINT <<FK, unique>>
    * number_of_days : INT
    * daily_rate : DECIMAL(10,2)
    * subtotal : DECIMAL(10,2)
    * surcharge_amount : DECIMAL(10,2)
    * discount_amount : DECIMAL(10,2)
    * tax_amount : DECIMAL(10,2)
    * total_amount : DECIMAL(10,2)
    pricing_strategy : VARCHAR(40)
    * payment_status : VARCHAR(20)
    payment_method : VARCHAR(30)
    * generated_at : DATETIME
}

entity "notification_logs" as logs {
    * id : BIGINT <<PK>>
    --
    * reservation_number : VARCHAR(20)
    * channel : VARCHAR(20)
    * message : VARCHAR(500)
    * sent_at : DATETIME
}

categories ||--o{ vehicles : "classifies"
customers  ||--o{ reservations : "books"
vehicles   ||--o{ reservations : "is reserved in"
users      ||--o{ reservations : "creates (created_by)"
reservations ||--o| bills : "generates"
reservations }o..o{ logs : "raises (by reservation_number)"

@enduml
